<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:textColor="@color/black"
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        />

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_below="@id/text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Email"
            android:minHeight="48dp"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/passwordconfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirmation"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

</RelativeLayout>